--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,6 @@
 services:
   - type: web
     name: trackflow-frontend
-    rootDir: frontend
-    buildCommand: npm install && npm run build
-    staticPublishPath: build
     env: static
+    buildCommand: cd frontend && npm install && npm run build
+    staticPublishPath: frontend/build
