A whole new damn release

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 SPOTIFY_CLIENT_ID=7939abf6b76d4fc7a627869350dbe3d7
 SPOTIFY_CLIENT_SECRET=b1aefd1ba3504dc28a441b1344698bd9
+DATABASE_URL=sqlite:///./songs.db
