--- a/render.yaml
+++ b/render.yaml
@@ -1,15 +1,11 @@
 services:
 - type: web
-  name: trackflow-api
-  env: python
-  buildCommand: pip install -r requirements.txt
-  startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
-  envVars:
-  - key: DATABASE_URL
-    sync: false
-  - key: SPOTIFY_CLIENT_ID
-    sync: false
-  - key: SPOTIFY_CLIENT_SECRET
-    sync: false
+  name: trackflow-frontend
+  env: static
+  buildCommand: npm install && npm run build
+  staticPublishPath: build
+  buildFilter:
+    paths:
+    - frontend/**/*
   repo: https://github.com/your-username/trackflow
-  rootDir: .
+  rootDir: frontend
