--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,13 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "serve": "^14.2.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "serve": "serve -s build -l $PORT"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
