--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
+  "name": "trackflow-frontend",
+  "version": "1.0.1",
+  "description": "TrackFlow Frontend - Music Management System",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
