--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,10 @@
-fastapi
-uvicorn
-sqlalchemy
-spotipy
-python-dotenv
-pytest
-pytest-asyncio
-httpx
-psycopg2-binary
-python-jose[cryptography]
-passlib[bcrypt]
-python-multipart
-email-validator
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+sqlalchemy==2.0.23
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.6
+psycopg2-binary==2.9.9
+requests==2.31.0
+python-dotenv==1.0.0
+cloudinary==1.36.0
