--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 SPOTIFY_CLIENT_ID=7939abf6b76d4fc7a627869350dbe3d7
 SPOTIFY_CLIENT_SECRET=b1aefd1ba3504dc28a441b1344698bd9
+CLOUDINARY_CLOUD_NAME=driy1yodi
+CLOUDINARY_API_KEY=662655243158747
+CLOUDINARY_API_SECRET=gaeWQpANnLhg0y0LXM9IlCAzZ4U
 DATABASE_URL=sqlite:///./songs.db
