--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -17,7 +17,6 @@ RUN npm install
 
 COPY . .
 RUN npm run build
-RUN npm install -g serve
 
 # Railway will provide PORT at runtime (typically 80)
 # EXPOSE is just documentation - Railway handles port mapping
@@ -27,6 +26,5 @@ RUN echo "Build date: ${BUILD_DATE}" > /app/build-info.txt
 RUN echo "VCS ref: ${VCS_REF}" >> /app/build-info.txt
 RUN echo "This is the FRONTEND Dockerfile - REBUILD REQUIRED FOR HTTPS FIX" >> /app/build-info.txt
 
-# Use Railway's PORT environment variable (Railway sets this automatically)
-# serve needs explicit hostname binding - use --hostname flag
-CMD ["sh", "-c", "serve -s build --listen $PORT --hostname 0.0.0.0"]
+# Use custom Node.js server that explicitly binds to 0.0.0.0
+CMD ["node", "server.js"]
