--- a/.env
+++ b/.env
@@ -1,2 +1,13 @@
 SPOTIFY_CLIENT_ID=7939abf6b76d4fc7a627869350dbe3d7
 SPOTIFY_CLIENT_SECRET=b1aefd1ba3504dc28a441b1344698bd9
+
+# Email Configuration for Password Reset
+EMAIL_USERNAME=yanivb297@gmail.com
+EMAIL_PASSWORD=lkur qwdh yhjn rjfc
+EMAIL_FROM=yanivb297@gmail.com
+EMAIL_FROM_NAME=TrackFlow Support
+EMAIL_SERVER=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_STARTTLS=True
+EMAIL_SSL_TLS=False
+FRONTEND_URL=http://localhost:3000
