--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,14 @@
 SPOTIFY_CLIENT_ID=7939abf6b76d4fc7a627869350dbe3d7
 SPOTIFY_CLIENT_SECRET=b1aefd1ba3504dc28a441b1344698bd9
 DATABASE_URL=postgresql://postgres.vhydslrserhdzzqmytie:vyhzwSBNFCVgj2oR@aws-0-eu-west-3.pooler.supabase.com:6543/postgres
+
+# Email Configuration for Password Reset
+EMAIL_USERNAME=yanivb297@gmail.com
+EMAIL_PASSWORD=lkur qwdh yhjn rjfc
+EMAIL_FROM=yanivb297@gmail.com
+EMAIL_FROM_NAME=TrackFlow Support
+EMAIL_SERVER=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_STARTTLS=True
+EMAIL_SSL_TLS=False
+FRONTEND_URL=https://your-production-frontend-url.com
